# pandas_exercises

./: pyproject.toml  requirements.txt
